fix: make sidebar fixed when content overflows

--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -11,13 +11,15 @@ main {
 
 .sidebar {
     flex: 1 1 300px;
-    max-width: 300px;
+    width: 270px;
     padding: 2rem 1rem;
     background-color: var(--c3);
     display: flex;
     flex-direction: column;
     font-family: "Inter", sans-serif;
     font-weight: 400;
+    height: 100vh;
+    position: fixed;
 }
 
 .sidebar h3 {
@@ -52,18 +54,19 @@ main {
 }
 
 .sidebar .form-check .form-switch .d-flex .align-items-center label {
-    color: rgba(0, 0, 0, 0.6); /* Apply your desired style here */
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .content {
     flex: 1 1 0;
     padding: 2rem;
+    margin-left: 270px;
 }
 
 .content h1 {
     color: var(--foregroundColor) !important;
     font-size: 26px;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     margin-top: 0.1rem;
     margin-left: 0.1rem;
     font-family: "Inter", sans-serif;
